# personal-assistant-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.md  personal-assistant-integration.md  protocol-personal-assistant.md  security.md
scripts/: local_e2e.py
src/ai_subscription_bridge/: __init__.py  cli.py  config.py  protocol.py  redaction.py  runner.py
src/ai_subscription_bridge/adapters/: __init__.py  base.py  personal_assistant.py
src/ai_subscription_bridge/executors/: __init__.py  base.py  codex.py  fake.py
tests/: test_cli.py  test_codex_executor.py  test_config.py  test_package_skeleton.py  test_personal_assistant_adapter.py  test_protocol.py  test_redaction.py  test_runner.py
